# fake-matroska-duration

./: .gitignore  README.md  fake-matroska-duration.sln  meson.build
include/: endian.h  fs.h  mem.h  meson.build  util.h
src/: endian.h  fs.c  main.c  mem.c  meson.build  util.c
